--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -62,6 +62,8 @@
 .main {
   flex-grow: 1;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 @media screen and (max-width: 966px) {
